Fix layout bugs by moving Header component

--- a/src/styles/css/Card.css
+++ b/src/styles/css/Card.css
@@ -1,7 +1,7 @@
 .popup-content {
   border-radius: 1rem !important;
   width: 684px !important;
-  display: flex !important;
+  display: flex;
   flex-direction: column;
   gap: 2rem;
   align-items: center;
@@ -17,21 +17,12 @@
     margin-top: 14px;
   }
 }
-
-.popup-content .popup-header {
-  padding: 1rem;
-}
-
-.card-container > .card-main {
-  width: 630px;
-}
-
 .card-main {
   display: flex;
   flex-direction: column;
   padding: 24px;
   gap: 10px;
-  width: 75%;
+  width: 93%;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
@@ -48,11 +39,11 @@
   font-size: 18px;
 }
 .card-title * {
-  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .card-info {
-  margin-left: 5px;
+  margin-right: 5px;
 }
 .card-info span {
   margin-right: 10px;
@@ -66,7 +57,7 @@
 .card-subheader {
   font-size: 14px;
   font-weight: 600;
-  margin-top: 1.5rem;
+  margin-top: 0.5rem;
   cursor: pointer;
 }
 
