--- a/src/styles/css/Header.css
+++ b/src/styles/css/Header.css
@@ -1,22 +1,34 @@
-.header-main {
-  position: absolute;
+.header-4K {
   height: 65px;
   background: white;
   display: flex;
-  align-items: center;
-  width: 100vw;
-  top: 0;
-  left: 0;
+  justify-content: center;
+  width: 100%;
+  background: white;
 }
 
-.title {
+.header-align-container {
+  height: 100%;
+  width: 100%;
+  max-width: 1200px;
+  display: flex;
+  justify-content: center;
+}
+
+.header-main {
+  height: 100%;
+  display: flex;
+  width: 80%;
+  align-items: center;
+}
+
+.header-title {
   font-weight: 700;
   font-size: 17.17px;
   position: relative;
-  margin-left: 12.5vw;
 }
 
-.title > svg {
+.header-title > svg {
   margin-left: 5px;
   transform: translateY(1px);
   color: black;
@@ -34,7 +46,11 @@
 
 @media (max-width: 480px) {
   .header-main {
+    width: 100%;
     justify-content: space-between;
+  }
+  .header-title {
+    margin-left: 7vw;
   }
   .header-main > span {
     display: none;
@@ -51,7 +67,7 @@
     font-weight: 700;
     color: #0D9488;
     background: #F0FDFA;
-    margin-right: 15vw;
+    margin-right: 10vw;
   }
   .filter-btn-active {
     color: white;
